update counter quation, table, figure within chapter instead section

--- a/thesis.tex
+++ b/thesis.tex
@@ -64,9 +64,9 @@
 \clearpage
 
 % Begin main thesis, start page numbering
-\counterwithin{equation}{section}
-\counterwithin{table}{section}
-\counterwithin{figure}{section}
+\counterwithin{equation}{chapter}{section}
+\counterwithin{table}{chapter}{section}
+\counterwithin{figure}{chapter}{section}
 \setcounter{secnumdepth}{3}
 \mainmatter
 \fancyhf{}
