fig bug numbering equation, table and figure

--- a/thesis.tex
+++ b/thesis.tex
@@ -64,9 +64,9 @@
 \clearpage
 
 % Begin main thesis, start page numbering
-\counterwithin{equation}{chapter}{section}
-\counterwithin{table}{chapter}{section}
-\counterwithin{figure}{chapter}{section}
+\counterwithin{equation}{chapter}
+\counterwithin{table}{chapter}
+\counterwithin{figure}{chapter}
 \setcounter{secnumdepth}{3}
 \mainmatter
 \fancyhf{}
