--- a/thesis.tex
+++ b/thesis.tex
@@ -23,8 +23,8 @@
 \usepackage{makecell}
 
 % Config reference
-\addbibresource{references.bib}
-
+\addbibresource{references/chapter-1.bib}
+\addbibresource{references/chapter-2.bib}
 % Setup hype link in thesis
 \hypersetup{urlcolor=blue,linkcolor=black,citecolor=black,colorlinks=true} 
 \DeclarePairedDelimiter\bra{\langle}{\rvert}
@@ -33,6 +33,7 @@
 
 
 % Config information thesis
+% =========== Thay đổi thông tin tại phần này ===========
 \upperuniname{ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH}
 \uniname{TRƯỜNG ĐẠI HỌC CÔNG NGHỆ THÔNG TIN}
 \deptname{KHOA MẠNG MÁY TÍNH VÀ TRUYỀN THÔNG}
@@ -44,6 +45,10 @@
 \stuname{NGUYỄN HỒNG SƠN \\NGUYỄN HẢI LONG}
 \stunamewithid{NGUYỄN HỒNG SƠN - 17520988\\NGUYỄN HẢI LONG - 17520712}
 \reporttime{NĂM 2021}
+\reporttype{KHÓA LUẬN TỐT NGHIỆP}
+\instruction{GIẢNG VIÊN HƯỚNG DẪN}
+\reportplace{TP. HỒ CHÍ MINH}
+% =========== Hết phần thay đổi thông tin ===========
 
 % Begin thesis
 \begin{document}
