--- a/references/chapter2.bib
+++ b/references/chapter2.bib
@@ -1,7 +1,15 @@
 @online{ShantoLatex,
-    title        = {How to add subfigure in Latex: : Step-by-Step Tutorial with Examples},
+    title        = {How to add subfigure in Latex: Step-by-Step Tutorial with Examples},
     author       = {Shanto Roy},
-    year         = 2018,
+    year         = {2018},
     url          = {https://shantoroy.com/latex/how-to-add-subfig-in-latex/},
+    urldate      = {2024-04-08}
+}
+
+@online{MartinRotate,
+    title        = {Rotate picture with caption},
+    author       = {Martin Scharrer},
+    year         = {2012},
+    url          = {https://tex.stackexchange.com/questions/44427/rotate-picture-with-caption/57531#57531},
     urldate      = {2024-04-08}
 }
