--- a/hcmuitthesis.cls
+++ b/hcmuitthesis.cls
@@ -14,7 +14,7 @@
 \RequirePackage[vietnamese,english]{babel}
 \RequirePackage{listings}
 \RequirePackage{graphicx}
-% \RequirePackage{caption}
+% \RequirePackage{catchfile}
 % \RequirePackage{subcaption}
 
 \usetikzlibrary{calc}
@@ -51,6 +51,7 @@
 \newcommand{\reportplace}[1]{\renewcommand{\@reportplace}{#1}}
 \newcommand{\@reporttime}{}
 \newcommand{\reporttime}[1]{\renewcommand{\@reporttime}{#1}}
+
 
 % =========== Overwrite exist command to custom project ============
 \renewcommand{\@title}{}
