--- a/thesis.tex
+++ b/thesis.tex
@@ -26,7 +26,9 @@
 \usepackage[vietnamese,english]{babel}
 \usepackage{multirow}
 \usepackage{longtable}
+\usepackage{rotating}
 
+% Define color and column type
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
@@ -141,6 +143,7 @@
 \include{chapters/main/chapter1.tex}
 \include{chapters/main/chapter2.tex}
 \include{chapters/main/chapter3.tex}
+\include{chapters/main/chapter4.tex}
 
 
 % Appendix chapter in thesis
