--- a/specialized-project/main.tex
+++ b/specialized-project/main.tex
@@ -25,7 +25,7 @@
 \usepackage{subfiles} % Chèn các file nhỏ, giúp chia các chapter ra nhiều file hơn
 
 % Config reference
-\addbibresource{references.bib}
+\addbibresource{ref.bib}
 
 % Setup hype link in thesis
 \hypersetup{urlcolor=blue,linkcolor=black,citecolor=black,colorlinks=true} 
