add master thesis

--- a/thesis.tex
+++ b/thesis.tex
@@ -7,31 +7,32 @@
 % =========== Thay đổi thông tin tại phần này ===========
 \upperuniname{ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH}
 \uniname{TRƯỜNG ĐẠI HỌC CÔNG NGHỆ THÔNG TIN}
-\deptname{KHOA MẠNG MÁY TÍNH VÀ TRUYỀN THÔNG}
-\stumajor{KỸ SƯ NGÀNH AN TOÀN THÔNG TIN}
+\stumajor{NGÀNH AN TOÀN THÔNG TIN}
+\majorcode{8480202}
 \title{SỬ DỤNG LATEX TRONG SOẠN THẢO KHÓA LUẬN TỐT NGHIỆP}
 \titleen{USING LATEX IN WRITING GRADUATION THESIS}
-\supervisor{GIẢNG VIÊN HƯỚNG DẪN}
+\supervisor{NGƯỜI HƯỚNG DẪN KHOA HỌC}
 \supervisorname{PGS. TS. GOOGLE \\ ThS. CHATGPT}
 \stuname{NGUYỄN HỒNG SƠN }
 \stunamewithid{NGUYỄN HỒNG SƠN - 17520988}
-\reporttype{KHÓA LUẬN TỐT NGHIỆP}
-\instruction{GIẢNG VIÊN HƯỚNG DẪN}
+\reporttype{LUẬN VĂN THẠC SĨ}
 \reportplace{TP. HỒ CHÍ MINH, NĂM }
 
 % =========== Hết phần thay đổi thông tin ===========
 
 \input{chapters/front/glossaries.tex}
 \makeglossaries
+
 % Begin thesis
 \begin{document}
 
 \coverpage%
-\secondcoverpage%
+% \secondcoverpage%
 
 % Begin above main thesis
 \frontmatter
-\include{chapters/front/decision.tex}
+\include{chapters/front/commitment.tex}
+% \include{chapters/front/decision.tex}
 \include{chapters/front/thanks.tex}
 \tableofcontents
 \clearpage
@@ -42,8 +43,6 @@
 \lstlistoflistings
 \clearpage
 \printglossaries
-
-% \include{chapters/front/translate.tex}
 \clearpage
 \mainthesis
 
