--- a/presentation/slide.tex
+++ b/presentation/slide.tex
@@ -171,7 +171,7 @@
 
 \author[Son Nguyen]{Nguyen Hong Son} % Presenter name(s), the optional parameter can contain a shortened version to appear on the bottom of every slide, while the main parameter will appear on the title slide
 
-\institute[UIT]{Instructor: Dr Le Duy Tan} % Your institution, the optional parameter can be used for the institution shorthand and will appear on the bottom of every slide after author names, while the required parameter is used on the title slide and can include your email address or additional information on separate lines
+\institute[UIT]{Instructor: Dr Google} % Your institution, the optional parameter can be used for the institution shorthand and will appear on the bottom of every slide after author names, while the required parameter is used on the title slide and can include your email address or additional information on separate lines
 
 \date[\today]{\today} % Presentation date or conference/meeting name, the optional parameter can contain a shortened version to appear on the bottom of every slide, while the required parameter value is output to the title slide
 % \logo{\includegraphics[scale=0.19]{img/nc-logo.png}}
@@ -194,7 +194,7 @@
 
     \begin{figure}
         \centering
-		\includegraphics[scale=0.15]{img/nc-logo.png}
+		\includegraphics[scale=0.3]{img/uit-logo.png}
 	\end{figure}
  
 	\titlepage % Output the title slide, automatically created using the text entered in the PRESENTATION INFORMATION block above
