--- a/presentation/sections/section4.tex
+++ b/presentation/sections/section4.tex
@@ -1,10 +1,10 @@
-\section{Conclution} % Seções são adicionadas para organizar sua apresentação em blocos discretos, todas as seções e subseções são automaticamente exibidas no índice como uma visão geral da apresentação, mas NÃO são exibidas como slides separados.
+\section{Conclusion}
 
 \begin{frame}{References}
     \footnotesize
     \begin{thebibliography}{99}
-        \bibitem{autorlivro} SOBRENOME, Nome do autor, \textit{Título do livro}, Edição, Editora, Ano de publicação, Local de publicação.
-        \bibitem{autorartigo} SOBRENOME, Nome do autor, \textit{Título do artigo}, Nome do periódico, Ano de publicação, Volume(Número), pp. Páginas, Local de publicação.
-        \bibitem{autorTese} SOBRENOME, Nome do autor, \textit{Título da tese/dissertação}, Nome da instituição, Tese (ou Dissertação), Ano de publicação, Local de publicação.
+        \bibitem{MartinRotate} SCHARRER, Martin, \textit{Rotate picture with caption}, 2012. 
+        Available at: \url{https://tex.stackexchange.com/questions/44427/rotate-picture-with-caption/57531\#57531}. 
+        Accessed: April 8, 2024.
     \end{thebibliography}
 \end{frame}
